src/golden/cards/templates/nested/errors/test.golden/undefined.fl
	struct MyX
	
	card UndefinedTemplate
		state 
			MyX x
		
		template top
			hold <- x => inner